This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

04-Dec-2002 (Lars Duening)  (3.3.321)
  - (make_func.y, comm.c, main.c, prolang.y) Removed warnings (reported by
      Coogan).
  - (comm.c) When logging on a new player, the prompt wasn't printed - in
      particular the prompt set by input_to(INPUT_PROMPT) (reported by
      Nostradamus).
  - (main.c) If the reserved areas can be reallocated, the out_of_memory
      flag is reset.
  - (simulate.c) catch() reports an 'out_of_memory' condition only
      if it was raised during the execution of the guarded code.
  - (smalloc.c) Changed OVERHEAD to M_OVERHEAD.

03-Dec-2002 (Lars Duening)  (3.3.320)
  - (patch-o-matic) Updated to new executable name.
  - (prolang.y, object.c) The filenames returned by include_list()
      now always start with a '/' to make their reuse in include statements
      simpler (suggested by Coogan).
  - (mudlib/telnet) Fiona donated the telnet negotiations module from
      Wunderland, containing a complete implementation of the telnet protocol
      (thanks!).
  - (sprintf.c) The %O/%Q formatter stumbled over really large arrays
      and mappings: the top-level function ignored if the conversion
      routine reallocated the string buffer (reported by Bardioc).

03-Dec-2002 (Lars Duening)
  - (sprintf.c, closure.c, pkg-mysql.c) Removed compiler warnings.

03-Dec-2002 (Lars Duening)  (3.3.319)
  - (Makefile.in) Corrected two typos.

03-Dec-2002 (Lars Duening)  (3.3.318)
  - (Makefile) Driver executable renamed from 'driver' to 'ldmud'.
  - (configure, Makefile) The configure script now tries to figure out
      on its own which warning options the compiler supports.
  - (comm.c, erq.h) The erq callbacks can now take the returned
      data as a string instead of an array (suggested by Dafire).
  - (mud/lp-245) Edward S. Marshall found all uses of the new keyword