@@ -206,6 +206,7 @@ Lars Duening thanks:
        Michael_Fedrowiz@gmx.net, Rhodry@ForgottenDreams)
      Michael Sporn (sporn@mathematik.hu-berlin.de, sunblood@tubmud)
      Mike Conley (mpc@sgi.net, Tamarindo@Sovereign)
+     mudder@Furtual.ORG
      "Nathan@Unholy Lands" (mud@pc181.iaee.tuwien.ac.at)
      Nepomuck@UNItopia
      Nick Derewianka (nickd@e-media.com.au)
