@@ -1,6 +1,12 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+05-Dec-2002 (Lars Duening)
+  - (config.h, comm, gcollect.c, main.c) Replaced USE_PTHREAD by USE_PTHREADS.
+  - (comm.c) Before printing the prompt, current_object is set to NULL
+      so that the player's catch_tell() is sure to be able to see the
+      prompt (reported by mudder@Furtual.ORG).
+
 04-Dec-2002 (Lars Duening)  (3.3.321)
   - (make_func.y, comm.c, main.c, prolang.y) Removed warnings (reported by
       Coogan).
